# Mycodeschool 目录的 CMakeLists.txt

# LinkedList 可执行文件
add_executable(LinkedList linkedlist/LinkedList.cpp linkedlist/LinkedList.h)

# linklistdel 可执行文件
add_executable(linklistdel linkedlist/linklistdel.c)

# doublylinkedlist 可执行文件
add_executable(doublylinkedlist linkedlist/doublylinkedlist.c)

# stackarr 可执行文件
add_executable(stackarr stack/stackarr.c)
